add memo of shell and soft

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@ iframe{
 <body>
 <div id="toc">
 <a href="os.md.html"     id="toc_item" target="main">OS</a>
+<a href="sh.md.html"     id="toc_item" target="main">Shell</a>
 <a href="dev.md.html"    id="toc_item" target="main">Dev</a>
 <a href="vcs.md.html"    id="toc_item" target="main">VCS</a>
+<a href="soft.md.html"   id="toc_item" target="main">Soft</a>
 </div>
 
 <div id="main_container">
