add vim keymaps

--- a/dev.md.html
+++ b/dev.md.html
@@ -19,6 +19,111 @@ vim
 - [gitv](https://github.com/gregsexton/gitv)
 - [agit](https://github.com/cohama/agit.vim)
 
+## Keymap
+
+~~~
+# *  : not oftenly used commands for me (candidates for remapping)
+# () : remaped commands
+
+* CTRL-E  one line scroll down
+* CTRL-Y  one line scroll up
+* CTRL-D  half page scroll down
+* CTRL-U  half page scroll up
+  CTRL-B  one page scroll up
+  CTRL-F  one page scroll down
+* CTRL-J  move down
+* CTRL-K  enter digraph
+* CTRL-A  add
+* CTRL-X  subtract
+
+  CTRL-W CTRL-X  exchange windows
+  CTRL-W CTRL-Z  close the preview window
+
+  a  add
+* b  backward
+  c  change
+  d  delete
+* e  end
+  f  find
+  g
+  h  move left
+  i  insert
+  j  move down
+  k  move up
+  l  move right
+  m  mark
+  n  serch next
+  o  insert
+  p  put
+  q
+  r  replace
+  s  substitute
+  t  find till
+  u  undo
+  v  visual mode
+  w  word
+  x  remove
+  y  yank
+  z
+
+  A  add
+* B  backward
+  C  change
+  D  delete
+* E  end
+  F  find
+  G  goto
+  H  home
+  I  insert
+  J  join
+  K  keyword
+  L  last
+  M  middle
+  N  search previous
+  O  insert
+  P  put
+  Q  ex mode (quit)
+  R  replace
+* S  substitute
+  T  find till
+  U  undo
+  V  visual mode
+* W  word
+* X  remove
+* Y  yanc
+* Z
+
+* -  move previous line
+* +  move next line
+* _  move next line
+* =  format text
+* [
+* ]
+* {
+* }
+  "  register
+  '  jump to a mark
+  `  jump to a mark
+  ~  switch case
+* |
+  \
+  /  search forward
+  ?  search backward
+  :  ex mode
+  ;  repeat find
+* ,  repeat find
+  .  repeat
+  <
+  >
+~~~
+
+## vimgrep
+
+### サブディレクトリの検索
+~~~
+:vimgrep WORD **
+~~~
+
 ## encryption
 
 command          | Description
