--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ iframe{
 <a href="sh.md.html"     id="toc_item" target="main">Shell</a>
 <a href="dev.md.html"    id="toc_item" target="main">Dev</a>
 <a href="vcs.md.html"    id="toc_item" target="main">VCS</a>
+<a href="prog.md.html"   id="toc_item" target="main">Prog</a>
 <a href="soft.md.html"   id="toc_item" target="main">Soft</a>
 <a href="stock.md.html"  id="toc_item" target="main">Stock</a>
 <a href="links.md.html"  id="toc_item" target="main">Links</a>
