add imagemagick memo

--- a/os.md.html
+++ b/os.md.html
@@ -208,6 +208,7 @@ pacman -S mingw-w64-x86_64-glew
 pacman -S mingw-w64-x86_64-glfw
 pacman -S mingw-w64-x86_64-glm
 pacman -S mingw-w64-x86_64-freeglut
+pacman -S mingw-w64-x86_64-opencv
 ~~~
 
 ## Not installed
