--- a/prog.md.html
+++ b/prog.md.html
@@ -8,6 +8,10 @@ Reference
 - [cpprefjp](https://cpprefjp.github.io/)
 - [ja.cppreference.com](http://ja.cppreference.com/w/)
 - [en.cppreference.com](http://en.cppreference.com/w/) [offline](http://en.cppreference.com/w/Cppreference:Archives)
+- [cpp-pocketref](https://github.com/cpp-pocketref/sample-code)
+- [C++11 - Wikipedia](https://ja.wikipedia.org/wiki/C%2B%2B11)
+- [C++11, C++14 新機能まとめ ～使いそうなものだけ](https://qiita.com/leon-joel/items/81415c1ef355c6246280)
+- [C++11スマートポインタ入門](https://qiita.com/hmito/items/db3b14917120b285112f)
 
 Library
 
