--- a/os.md.html
+++ b/os.md.html
@@ -202,10 +202,10 @@ Option              | 説明
 ~~~
 pacman -S git
 pacman -S vim ctags vimpager
+pacman -S tmux winpty
 pacman -S zip unzip
 pacman -S man-pages-posix
 pacman -S base-devel
-pacman -S tmux winpty
 pacman -S mingw-w64-x86_64-toolchain
 pacman -S mingw-w64-x86_64-clang
 pacman -S mingw-w64-x86_64-cmake
@@ -315,7 +315,7 @@ pkg install termux-exec
 
 ## Installed
 ~~~
-pkg install git vim ctags clang cmake
+pkg install git vim ctags clang cmake tmux
 ~~~
 
 <meta name="keywords" content="*memo_misc*">
