--- a/vcs.md.html
+++ b/vcs.md.html
@@ -134,9 +134,9 @@ git ls-files              # list tracked files
 ## commit
 ~~~
 git commit
-git commit -a            # 変更されたtraced fileをaddしてcommit
-git commit -m "message"  # メッセージをつけてコミット
-git commit --amend       # 直前のコミットを取り消す
+git commit -a                       # 変更されたtraced fileをaddしてcommit
+git commit -m "message"             # メッセージをつけてコミット
+git commit --amend --author="name"  # 名前を変えてコミットしなおす
 ~~~
 
 ## commit message
