--- a/dev.md.html
+++ b/dev.md.html
@@ -3,6 +3,24 @@
 
 <meta name="keywords" content="*memo_dev*">
 
+<meta name="keywords" content="*memo_keymap*">
+Key map
+===========================================================================
+App  | Command              | Description
+-----|----------------------|---
+tmux | F1                   | prefix
+vim  | F2                   | nerdtree
+vim  | F3                   | fugitive
+vim  | F4                   | agit
+vim  | F5                   | prev tab
+vim  | F6                   | next tab
+tmux | F7                   | next window
+tmux | F8                   | prev pane
+tmux | F9                   | next pane
+tmux | F10                  | maximize pane
+vim  | F11                  | copy
+vim  | F12                  | paste
+
 <meta name="keywords" content="*memo_tmux*">
 tmux
 ===========================================================================
@@ -177,6 +195,7 @@ p                | プレビュー
 * CTRL-K  enter digraph
 * CTRL-A  add
 * CTRL-X  subtract
+  CTRL-[  ESC
 
   CTRL-W CTRL-X  exchange windows
   CTRL-W CTRL-Z  close the preview window
