--- a/dev.md.html
+++ b/dev.md.html
@@ -14,12 +14,32 @@ vim  | F3                   | fugitive
 vim  | F4                   | agit
 vim  | F5                   | prev tab
 vim  | F6                   | next tab
-tmux | F7                   | next window
-tmux | F8                   | prev pane
-tmux | F9                   | next pane
+vim  | F7                   | memo
+vim  | F8                   | w3m
+vim  | F9                   | chrome
 tmux | F10                  | maximize pane
 vim  | F11                  | copy
 vim  | F12                  | paste
+
+<meta name="keywords" content="*memo_w3m*">
+w3m
+===========================================================================
+
+- [w3m](http://w3m.sourceforge.net/index.ja.html)
+
+## Key map
+Command              | Description
+---------------------|---
+ESC b                | bookmarks
+ESC a                | add the current page to bookmarks
+SPACE                | next page
+b                    | prev page
+ENTER                | go to the hyper link
+B                    | remove the current buffer
+s                    | select buffer
+TAB                  | select the next hyper link
+Shift + TAB          | select the prev hyper link
+Q                    | quit
 
 <meta name="keywords" content="*memo_tmux*">
 tmux
