--- a/prog.md.html
+++ b/prog.md.html
@@ -13,16 +13,24 @@ Reference
 - [C++11, C++14 新機能まとめ ～使いそうなものだけ](https://qiita.com/leon-joel/items/81415c1ef355c6246280)
 - [C++11スマートポインタ入門](https://qiita.com/hmito/items/db3b14917120b285112f)
 
+<meta name="keywords" content="*memo_lib*">
+
 Library
 
-- glm https://glm.g-truc.net/
-- dlib http://dlib.net/
-- Eigen http://eigen.tuxfamily.org/
-- OpenCV https://opencv.org/
-- stb https://github.com/nothings/stb
-- nanoflann https://github.com/jlblancoc/nanoflann
-- nanort https://github.com/lighttransport/nanort
-- picojson https://github.com/kazuho/picojson
+- [glm](https://glm.g-truc.net/)
+  | [doc](https://glm.g-truc.net/0.9.8/api/modules.html)
+- [dlib](http://dlib.net/)
+- [Eigen](http://eigen.tuxfamily.org/)
+- [OpenCV](https://opencv.org/)
+  | [doc](https://docs.opencv.org/master/)
+- [stb](https://github.com/nothings/stb)
+- [nanoflann](https://github.com/jlblancoc/nanoflann)
+- [nanort](https://github.com/lighttransport/nanort)
+- [picojson](https://github.com/kazuho/picojson)
+
+Library doc
+
+- [glm - グラフィックスプログラミングのためのC++数学系ライブラリー](https://qiita.com/usagi/items/f34976a3d3011506ff7d)
 
 <meta name="keywords" content="*memo_c*">
 <meta name="keywords" content="*memo_c++*">
