--- a/dev.md.html
+++ b/dev.md.html
@@ -3,6 +3,14 @@
 
 <meta name="keywords" content="*memo_dev*">
 
+<meta name="keywords" content="*memo_font*">
+Font
+===============================================================================
+- [Best programming fonts](https://www.slant.co/topics/67/~best-programming-fonts)
+- [日本語等幅フォント](https://qiita.com/hamaguchitm/items/546d40b7777bd9242e78)
+- [Myrica](https://myrica.estable.jp/)
+- [Rounded Mgen+](http://jikasei.me/font/rounded-mgenplus/)
+
 <meta name="keywords" content="*memo_keymap*">
 Key map
 ===========================================================================
@@ -20,26 +28,6 @@ vim  | F9                   | chrome
 tmux | F10                  | maximize pane
 vim  | F11                  | copy
 vim  | F12                  | paste
-
-<meta name="keywords" content="*memo_w3m*">
-w3m
-===========================================================================
-
-- [w3m](http://w3m.sourceforge.net/index.ja.html)
-
-## Key map
-Command              | Description
----------------------|---
-ESC b                | bookmarks
-ESC a                | add the current page to bookmarks
-SPACE                | next page
-b                    | prev page
-ENTER                | go to the hyper link
-B                    | remove the current buffer
-s                    | select buffer
-TAB                  | select the next hyper link
-Shift + TAB          | select the prev hyper link
-Q                    | quit
 
 <meta name="keywords" content="*memo_tmux*">
 tmux
@@ -297,6 +285,26 @@ p                | プレビュー
   <
   >
 ~~~
+
+<meta name="keywords" content="*memo_w3m*">
+w3m
+===========================================================================
+
+- [w3m](http://w3m.sourceforge.net/index.ja.html)
+
+## Key map
+Command              | Description
+---------------------|---
+ESC b                | bookmarks
+ESC a                | add the current page to bookmarks
+SPACE                | next page
+b                    | prev page
+ENTER                | go to the hyper link
+B                    | remove the current buffer
+s                    | select buffer
+TAB                  | select the next hyper link
+Shift + TAB          | select the prev hyper link
+Q                    | quit
 
 <meta name="keywords" content="*memo_android*">
 android
